Revision history for Perl module RTx::Shredder

v0.05

    * fea: no_tickets option in Users plugin
    * fix: no validation of mail and name in Users plugin as
           it's been broken

v0.04
    * fix: RT::Links->Next skip links that point to
           deleted records, and we were leaving them too
    * fix: any record may have links, move code into RT::Record
           from RT::Ticket
    * fea: delete AddLink transactions when wipe Link
    * fea: more tests

v0.03_03
    * fix: typo in docs
    * fix: load exceptions class where we use it

v0.03_02
    * fix: on some configurations Shredder WebUI was failing with
           404 (not found) error

v0.03_01
    * WARN: API changes, see repository logs
    * doc: new reworked INSTALLation instructions
    * fea: initial DB transactions support
    * fix: WebUI JavaScript in Opera and IE didn't work, now it
           works in Opera and should work in IE (please test and report)
    * fix: ObjectCFValues was not cleaned absolutly correct
    * fea: $RT::ShredderStoragePath config option, see `perldoc RTx::Shredder`
    * doc: API documentation
    * fea: changes in errors handling code, no more useless stack traces

v0.03
    * no significant changes against 0.02_03

v0.02_03
    * api: mutliple values for the arguments of the plugins
    * doc: docs in the Plugin class
    * fea: --object has been deprecated by plugin 'Objects'

v0.02_02
	* fix: search for users by name fixed
	* fix: returned patch because RT 3.4.0 and 3.4.1 has no code in mainline
	* fea: check/uncheck all objects at once in WebUI
	* api: generic mask handling via $plugin->ConvertMaskToSQL

v0.02_01
	* fea: Web interface
	* fea: plugins framework
	* fea: Plugins for Tickers, Attachments and Users
	* fea: new CLI options: --plugin, --plugin list and --plugin help
	* fea: messages from CLI now are more useful
	* upd: doc updates
	* fea: RTx::Shredder::PutObjects method now support array references