@@ -1,9 +1,0 @@
-^Makefile$
-^Build$
-^blib/
-^_build/
-^pm_to_blib/
-^cover_db/
-^t/data/tmp/
-\.tar\.gz$
-^inc/\.author
