@@ -1,5 +1,5 @@
 name: RTx-Shredder
-version: 0.04
+version: 0.05
 abstract: RT Shredder Extension
 author: Ruslan U. Zakirov <Ruslan.Zakirov@gmail.com>
 license: perl
